# wasm-rust

./: Cargo.toml  Makefile  config.json  envoy-bootstrap.yaml  runtime-config.json  test.yaml
src/: filter.rs  oidc_filter.rs
