[package]
name = "wasm-rust"
version = "0.1.0"
authors = ["Agung Pratama <agp.csui08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy-wasm = "0.1.2" # The Rust SDK for proxy-wasm
log = "0.4.11"

[lib]
path = "src/filter.rs"
crate-type = ["cdylib"]
