[package]
name = "wasm-rust"
version = "0.1.0"
authors = ["Agung Pratama <agp.csui08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Have to use a Eupraxia Labs fork because config reading is broken upstream
# see: https://github.com/proxy-wasm/proxy-wasm-rust-sdk/issues/6
proxy-wasm = { git = "https://github.com/eupraxialabs/proxy-wasm-rust-sdk.git" }
#proxy-wasm = "0.1.2" # The Rust SDK for proxy-wasm
log = "0.4.11"
url = "2.1.1"
serde_json = "1.0"
state = "0.4.1"

[lib]
#path = "src/oidc_filter.rs"
path = "src/filter.rs"
crate-type = ["cdylib"]
